--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,5 @@ Depends:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/mitsuoxv/jp-household
+BugReports: https://github.com/mitsuoxv/jp-household/issues
